--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,7 +2,7 @@
 
 <fieldset>
   <legend>Edit user profile</legend>
-  <%= form_for @user, url: update_profile_path(@user.id), method: :put do |form| %>
+  <%= form_for @user, method: :put do |form| %>
     <div>
       <%= form.label :name %>
       <%= form.text_field :name, size: 20 %>
